[package]
name = "lyrae-macro"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "=1.0.82"
solana-program = "^1.8.1"
bytemuck = "^1.7.2"
quote = "^1.0.9"
safe-transmute = "^0.11.1"

lyrae-common = { path = "../common" }